--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,53 +1,68 @@
 h1{
     text-align: center;
 }
-
+.login{
+    background-color: #dce5ec;
+}
 .loginbox{
-    width: 350px;
-    height: 350px;
+    width: 23%;
+    height: 300px;
     color:black;
-    top:50%;
-    left:75%;
+    top:25%;
+    left:60%;
+   
     position: absolute;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    transform: translate(-50%,-50%);
     box-sizing: border-box;
     border-radius: 24px;
+    background-color: #FFFF;
+    padding: 3%;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
-.loginbox input{
-    width: 200px;
-    margin-bottom: 20px;
+.switch{
+    left:60%;
+    position: absolute;
+    padding: 5px;
+    top:20%;
+
 }
-.loginbox input[type="email"],input[type="password"]{
+.switch>button{
+    background-color: transparent;
+    border: none;
+}
+.active{
+    background-color: transparent;
+    border-bottom: 1px solid black;
+}
+.mb-3{
+padding-top: 5px;
+}
+.loginbox input{
+    width: 80%;
+    margin-bottom: 20px;
     border: none;
     border-bottom: 1px solid black;
     background: transparent;
     outline: none;
+    font-size:15px;
     height: 40px;
+    padding: 10px;
     
 }
-.loginbox button[type="submit"]{
-    border: none;
-    outline: none;
-    height: 40px;
-    background-color: #2990e9;
-    color:black;
-    font-size:18px;
-    margin-left: 110px;
-    border-radius: 20px;
+
+.loginbox ::placeholder{
+    font-size: 20px;
 }
 
-.loginbox button[type="button"]{
-    height:20px;
-    width: 20px;
-    text-align: center;
-    font-weight: bolder;
-    float:right;
-    margin-top: 10px;
-    margin-left: 50px;
-    cursor: pointer;
-    transform: translate(0%, -50%);
+.loginbox button[type="submit"]{
+    padding: 15px 10px;
+    background-image: linear-gradient(315deg, #362bff 30%, #2990e9 90%);
+    border-radius: 24px;
+    border-style: none;
+    width: 80%;
+    margin-top:60px;
+    margin-left: 8.5%;
+    color: #ffff;
 }
 .user{
     padding-left: 15px;
@@ -55,4 +70,15 @@ h1{
 svg{
     max-height:100vh;
 
+}
+@media only screen and (max-width: 790px) {
+    .loginbox{
+        width: 40%;
+        left: 30%;
+        top:20%;
+    }
+    .switch{
+        left: 30%;
+        top:14%; 
+    }
 }
